--- a/envs/absplice.yaml
+++ b/envs/absplice.yaml
@@ -1,4 +1,4 @@
-name: absplice_vale
+name: absplice
 channels:
   - conda-forge
   - bioconda
@@ -12,4 +12,4 @@ dependencies:
   - tqdm==4.62.3
   - cloudpickle==2.0.0
   - pickleshare==0.7.5
-prefix: /opt/modules/i12g/anaconda/envs/absplice_vale
+prefix: /opt/modules/i12g/anaconda/envs/absplice
